After creating an order jumps to OrderItems/Create action. Approve action added to PurchaseOrders. StartDate properties added to ProcessStep

--- a/Source/CriticalPath.Web/Views/ProcessSteps/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/ProcessSteps/Details.cshtml
@@ -42,26 +42,50 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.TargetDate)
+        @Html.DisplayNameFor(model => model.TargetStartDate)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.TargetDate)
+        @Html.DisplayFor(m => m.TargetStartDate)
     </div>
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.ForecastDate)
+        @Html.DisplayNameFor(model => model.TargetEndDate)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.ForecastDate)
+        @Html.DisplayFor(m => m.TargetEndDate)
     </div>
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.RealizedDate)
+        @Html.DisplayNameFor(model => model.ForecastStartDate)
     </label>
     <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.RealizedDate)
+        @Html.DisplayFor(m => m.ForecastStartDate)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.ForecastEndDate)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.ForecastEndDate)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.RealizedStartDate)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.RealizedStartDate)
+    </div>
+</div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.RealizedEndDate)
+    </label>
+    <div class="col-md-10 col-sm-9">
+        @Html.DisplayFor(m => m.RealizedEndDate)
     </div>
 </div>
 <div class="row">
