--- a/Source/CriticalPath.Web/Views/OrderItems/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/OrderItems/Edit.cshtml
@@ -16,11 +16,12 @@
         
         @Html.HiddenFor(m => m.DisplayOrder)
         @Html.HiddenFor(m => m.PurchaseOrderId)
+        @Html.HiddenFor(m => m.ProductId)
         <div class="form-group">
-            @Html.LabelFor(model => model.ProductId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
+            @Html.LabelFor(model => model.Product, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.DropDownList("ProductId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.ProductId, "", new { @class = "text-danger" })
+                @Html.EditorFor(m => m.Product, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(m => m.Product, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
