--- a/Source/CriticalPath.Web/Views/Contacts/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/Contacts/Index.cshtml
@@ -23,6 +23,7 @@
     @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "searchForm" }))
     {
         @Html.Hidden("page", page)
+        @Html.Hidden("pageSize", pageSize)
         <div class="col-md-4 col-sm-5">
             @Html.Partial("_SearchBoxPartial")
         </div>
@@ -35,12 +36,9 @@
             <th>@ActionStrings.Action</th>
             <th>@Html.DisplayNameFor(model => model.FirstName)</th>
             <th>@Html.DisplayNameFor(model => model.LastName)</th>
+            <th>@Html.DisplayNameFor(model => model.Company)</th>
             <th>@Html.DisplayNameFor(model => model.EmailWork)</th>
             <th>@Html.DisplayNameFor(model => model.EmailHome)</th>
-            <th>@Html.DisplayNameFor(model => model.PhoneMobile)</th>
-            <th>@Html.DisplayNameFor(model => model.PhoneWork1)</th>
-            <th>@Html.DisplayNameFor(model => model.PhoneWork2)</th>
-            <th>@Html.DisplayNameFor(model => model.Company)</th>
         </tr>
     @foreach (var item in Model)
     {
@@ -60,8 +58,8 @@
                             {
                                 <li>
                                     <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.FullName)</b>', @item.Id);">
-                                    @ActionStrings.Delete
-                                </a>
+                                        @ActionStrings.Delete
+                                    </a>
                                 </li>
                             }
                         </ul>
@@ -69,12 +67,9 @@
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.FirstName)</td>
                 <td>@Html.DisplayFor(modelItem => item.LastName)</td>
+                <td>@Html.DisplayFor(modelItem => item.Company)</td>
                 <td>@Html.DisplayFor(modelItem => item.EmailWork)</td>
                 <td>@Html.DisplayFor(modelItem => item.EmailHome)</td>
-                <td>@Html.DisplayFor(modelItem => item.PhoneMobile)</td>
-                <td>@Html.DisplayFor(modelItem => item.PhoneWork1)</td>
-                <td>@Html.DisplayFor(modelItem => item.PhoneWork2)</td>
-                <td>@Html.DisplayFor(modelItem => item.Company)</td>
             </tr>
     }
     </table>
