--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -52,14 +52,25 @@
                             <li>@Html.ActionLink(@EntityStrings.PurchaseOrders, "Index", "PurchaseOrders")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreatePurchaseOrder, "Create", "PurchaseOrders")</li>
                             <li class="divider"></li>
+                            <li>@Html.ActionLink(@EntityStrings.Suppliers, "Index", "Suppliers")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreateSupplier, "Create", "Suppliers")</li>
+                            <li class="divider"></li>
+                            <li>@Html.ActionLink(@EntityStrings.Processes, "Index", "Processes")</li>
+                            <li>@Html.ActionLink(@EntityStrings.ProcessSteps, "Index", "ProcessSteps")</li>
+                        </ul>
+                    </li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            @EntityStrings.Companies<b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
                             <li>@Html.ActionLink(@EntityStrings.Customers, "Index", "Customers")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreateCustomer, "Create", "Customers")</li>
                             <li class="divider"></li>
                             <li>@Html.ActionLink(@EntityStrings.Suppliers, "Index", "Suppliers")</li>
                             <li>@Html.ActionLink(@EntityStrings.CreateSupplier, "Create", "Suppliers")</li>
                             <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.Processes, "Index", "Processes")</li>
-                            <li>@Html.ActionLink(@EntityStrings.ProcessSteps, "Index", "ProcessSteps")</li>
+                            <li>@Html.ActionLink(@EntityStrings.Contacts, "Index", "Contacts")</li>
                         </ul>
                     </li>
                     @if (User.IsInRole(SecurityRoles.Admin))
