--- a/Source/CriticalPath.Web/Views/Products/Edit.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Edit.cshtml
@@ -21,13 +21,7 @@
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.DropDownList("CategoryId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.CategoryId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.Partial("_ProductCategorySelectPartial", Model);
         <div class="form-group">
             @Html.LabelFor(model => model.Code, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-5 col-md-6 col-sm-7">
