--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Approve.cshtml
@@ -33,14 +33,6 @@
 </div>
 <div class="row">
     <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.DueDate)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.DueDate)
-    </div>
-</div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
         @Html.DisplayNameFor(model => model.Code)
     </label>
     <div class="col-md-10 col-sm-9">
@@ -63,18 +55,18 @@
         @Html.DisplayFor(m => m.Notes)
     </div>
 </div>
-<div class="row">
-    <label class="control-label col-md-2 col-sm-3">
-        @Html.DisplayNameFor(model => model.OrderItems)
-    </label>
-    <div class="col-md-10 col-sm-9">
-        @Html.DisplayFor(m => m.OrderItems)
-    </div>
-</div>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     @Html.HiddenFor(model => model.Id)
+    <div class="row">
+        <label class="control-label col-md-2 col-sm-3">
+            @Html.DisplayNameFor(model => model.DueDate)
+        </label>
+        <div class="col-lg-5 col-md-6 col-sm-7">
+            @Html.EditorFor(m => m.DueDate)
+        </div>
+    </div>
     <div class="row mt40">
         <label class="control-label col-md-2 col-sm-3">
             @Html.DisplayNameFor(model => model.IsApproved)
