--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Index.cshtml
@@ -35,12 +35,12 @@
         <tr>
             <th width="20px">@ActionStrings.Action</th>
             <th width="20px">@Html.DisplayNameFor(model => model.IsApproved)</th>
-            <th>@Html.DisplayNameFor(model => model.Title)</th>
+            <th>@Html.DisplayNameFor(model => model.Product)</th>
             <th>@Html.DisplayNameFor(model => model.Customer)</th>
             <th>@Html.DisplayNameFor(model => model.OrderDate)</th>
             <th>@Html.DisplayNameFor(model => model.DueDate)</th>
-            <th>@Html.DisplayNameFor(model => model.Code)</th>
-            <th>@Html.DisplayNameFor(model => model.OrderItems)</th>
+            <th>@Html.DisplayNameFor(model => model.Quantity)</th>
+            <th>@Html.DisplayNameFor(model => model.UnitPrice)</th>
         </tr>
         @foreach (var item in Model)
         {
@@ -65,25 +65,20 @@
                                 </li>
                             }
                             <li class="divider"></li>
-                            @if (!item.IsApproved)
+                            @if (!item.IsApproved && canUserApprove)
                             {
-                                <li>@Html.ActionLink(EntityStrings.AddOrderItem, "Create", "OrderItems", new { purchaseOrderId = item.Id }, null)</li>
-                                if (canUserApprove)
-                                {
-                                    <li>@Html.ActionLink(ActionStrings.Approve, "Approve", new { id = item.Id })</li>
-                                }
+                                <li>@Html.ActionLink(ActionStrings.Approve, "Approve", new { id = item.Id })</li>
                             }
-                            <li>@Html.ActionLink(EntityStrings.OrderItems, "Index", "OrderItems", new { purchaseOrderId = item.Id, pageSize = item.OrderItems.Count }, null)</li>
                         </ul>
                     </div>
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.IsApproved)</td>
-                <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                <td>@Html.DisplayFor(modelItem => item.Product)</td>
                 <td>@Html.DisplayFor(modelItem => item.Customer)</td>
                 <td>@Html.DisplayFor(modelItem => item.OrderDate)</td>
                 <td>@Html.DisplayFor(modelItem => item.DueDate)</td>
-                <td>@Html.DisplayFor(modelItem => item.Code)</td>
-                <td>@item.OrderItems.Count</td>
+                <td>@Html.DisplayFor(modelItem => item.Quantity)</td>
+                <td>@Html.DisplayFor(modelItem => item.UnitPrice)</td>
             </tr>
         }
     </table>
