--- a/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/_Layout.cshtml
@@ -75,17 +75,7 @@
                     </li>
                     @if (User.IsInRole(SecurityRoles.Admin))
                     {
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                @CommonStrings.Admin<b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li>@Html.ActionLink("Set Application Theme", "SelectTheme", "AdmPanel")</li>
-                                <li class="divider"></li>
-                                <li>@Html.ActionLink(@EntityStrings.ProcessTemplates, "Index", "ProcessTemplates")</li>
-                                <li>@Html.ActionLink(@EntityStrings.CreateProcessTemplate, "Create", "ProcessTemplates")</li>
-                            </ul>
-                        </li>
+                        <li>@Html.ActionLink(CommonStrings.Admin, "Index", "Admin")</li>
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -103,6 +93,5 @@
             <p>&copy; @DateTime.Now.Year - Critical Path Application</p>
         </footer>
     </div>
-    @RenderSection("bottom", required: false)
 </body>
 </html>
