SizeStandarts CRUD operations fixed

--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizeStandard.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizeStandard.cshtml
@@ -1,11 +1,11 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeCaption
+@model SizeStandard
 @{
     Layout = null;
 }
 @if (Model != null)
 {
-    <div class="col-xs-1 sizeCaption-Caption">@Model.Caption</div>
+    <div><a href='/SizeStandards/Details/@Model.Id'>@Model.Title</a></div>
 }
