--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeCaptions/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeCaptions/Edit.cshtml
@@ -28,13 +28,7 @@
                 @Html.ValidationMessageFor(m => m.Caption, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            @Html.LabelFor(model => model.SizeStandardId, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.DropDownList("SizeStandardId", null, ActionStrings.SelectPlease, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(m => m.SizeStandardId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+        @Html.HiddenFor(m => m.SizeStandardId)
         @Html.Partial("_SaveButtonsPartial")
     </div>
 }
