--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeCaptions/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeCaptions/Index.cshtml
@@ -57,7 +57,7 @@
                             @if (canUserDelete)
                             {
                                 <li>
-                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.Title)</b>', @item.Id);">
+                                    <a href="#deleteConfirm" data-toggle="modal" onclick="setDelete('<b>@(item.Caption)</b>', @item.Id);">
                                         @ActionStrings.Delete
                                     </a>
                                 </li>
