--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Edit.cshtml
@@ -23,9 +23,8 @@
         </div>
         <div class="form-group">
             @Html.LabelFor(model => model.SizeCaptions, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.SizeCaptions, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.SizeCaptions, "", new { @class = "text-danger" })
+            <div class="col-lg-6 col-md-7 col-sm-8 pt5">
+                @Html.DisplayFor(m => m.SizeCaptions, new { htmlAttributes = new { @class = "form-control" } })
             </div>
         </div>
         @Html.Partial("_SaveButtonsPartial")
