--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Index.cshtml
@@ -63,12 +63,12 @@
                             }
                             <li class="divider"></li>
                                 <li>@Html.ActionLink(EntityStrings.AddSizeCaption, "Create", "SizeCaptions", new { sizeStandardId = item.Id }, null)</li>
-                                <li>@Html.ActionLink(EntityStrings.SizeCaption, "Index", "SizeCaptions", new { sizeStandardId = item.Id }, null)</li>
+                                <li>@Html.ActionLink(EntityStrings.SizeCaptions, "Index", "SizeCaptions", new { sizeStandardId = item.Id }, null)</li>
                         </ul>
                     </div>
                 </td>
                 <td>@Html.DisplayFor(modelItem => item.Title)</td>
-                <td>@item.SizeCaptions.Count</td>
+                <td>@Html.DisplayFor(modelItem => item.SizeCaptions)</td>
             </tr>
     }
     </table>
