--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -15,3 +15,24 @@
 .dl-horizontal dt {
     white-space: normal;
 }
+
+.sizeCaption-Caption {
+    color: #DDD;
+    background-color: #3a3f44;
+    text-align: center;
+    padding: 4px;
+    margin-right: 4px !important;
+    font-size: 80%;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.3);
+    background-image: -webkit-linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-image: -o-linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#484e55), color-stop(60%, #3a3f44), to(#313539));
+    background-image: linear-gradient(#484e55, #3a3f44 60%, #313539);
+    background-repeat: no-repeat;
+    -webkit-filter: none;
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff484e55', endColorstr='#ff313539', GradientType=0);
+    filter: none;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+}
