--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Create.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Create.cshtml
@@ -1,7 +1,7 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeStandard
+@model SizeStandardVM
 @{
     ViewBag.Title = EntityStrings.CreateSizeStandard;
 }
@@ -9,24 +9,19 @@
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
-        
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
+            <div class="col-lg-7 col-md-8 col-sm-8">
                 @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.SizeCaptions, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.EditorFor(m => m.SizeCaptions, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(m => m.SizeCaptions, "", new { @class = "text-danger" })
-            </div>
+            @Html.Partial("_EditSizeCaptions")
         </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
