--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizeStandards/Edit.cshtml
@@ -1,7 +1,7 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeStandard
+@model SizeStandardVM
 @{
     ViewBag.Title = EntityStrings.EditSizeStandard;
 }
@@ -22,10 +22,7 @@
             </div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.SizeCaptions, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-6 col-md-7 col-sm-8 pt5">
-                @Html.DisplayFor(m => m.SizeCaptions, new { htmlAttributes = new { @class = "form-control" } })
-            </div>
+            @Html.Partial("_EditSizeCaptions")
         </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
